fix: make background darker for better contrast ratio

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
     color: #ece7e7;
     margin: 0;
     padding: 0;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4) 10%, rgba(0, 0, 0, 0.0));
 }
 
 .container {
